--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@yozora/tokenizer-paragraph": "^2.0.2-alpha.0",
     "@yozora/tokenizer-text": "^2.0.2-alpha.0",
     "glob": "^8.0.3",
+    "js-yaml": "^4.1.0",
     "line-reader": "^0.4.0",
     "lodash": "^4.17.21",
+    "rdf-ext": "^2.0.1",
     "rehype-stringify": "^9.0.3",
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
