Added pretty print

--- a/package.json
+++ b/package.json
@@ -18,17 +18,21 @@
   },
   "homepage": "https://github.com/cristianvasquez/dotTriples#readme",
   "dependencies": {
+    "@rdfjs-elements/formats-pretty": "^0.5.1",
     "@yozora/core-parser": "^2.0.2-alpha.0",
     "@yozora/parser": "^2.0.1",
     "@yozora/parser-gfm": "^2.0.2-alpha.0",
     "@yozora/tokenizer-blockquote": "^2.0.2-alpha.0",
     "@yozora/tokenizer-paragraph": "^2.0.2-alpha.0",
     "@yozora/tokenizer-text": "^2.0.2-alpha.0",
+    "@zazuko/rdf-vocabularies": "^2022.6.29",
+    "get-stream": "^6.0.1",
     "glob": "^8.0.3",
     "js-yaml": "^4.1.0",
     "line-reader": "^0.4.0",
     "lodash": "^4.17.21",
     "rdf-ext": "^2.0.1",
+    "readable-stream": "^4.1.0",
     "rehype-stringify": "^9.0.3",
     "remark-frontmatter": "^4.0.1",
     "remark-parse": "^10.0.1",
