--- a/playground/package.json
+++ b/playground/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.37",
-    "vue-class-component": "^8.0.0-0",
+    "core-js": "^3.25.1",
     "golden-layout": "^2.5.0",
-    "core-js": "^3.25.1"
+    "pinia": "^2.0.22",
+    "vue": "^3.2.37",
+    "vue-class-component": "^8.0.0-0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
