--- a/playground/package.json
+++ b/playground/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^9.2.0",
     "core-js": "^3.25.1",
     "golden-layout": "^2.5.0",
     "pinia": "^2.0.22",
