--- a/playground/package.json
+++ b/playground/package.json
@@ -1,12 +1,13 @@
 {
   "name": "playground",
-  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "nodemon server.js",
+    "both": "npm run server & npm run dev"
   },
   "dependencies": {
     "@vueuse/core": "^9.2.0",
@@ -14,10 +15,13 @@
     "golden-layout": "^2.5.0",
     "pinia": "^2.0.22",
     "vue": "^3.2.37",
-    "vue-class-component": "^8.0.0-0"
+    "vue-class-component": "^8.0.0-0",
+    "ws": "^8.8.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
+    "naive-ui": "^2.33.3",
+    "nodemon": "^2.0.19",
     "vite": "^3.1.0"
   }
 }
