--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dottriples",
   "type": "module",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "unified": "^10.1.2"
   },
   "devDependencies": {
+    "cli-progress": "^3.11.2",
     "expect": "^28.1.1",
     "expect-mocha-snapshot": "^2.1.5",
     "mocha": "^10.0.0"
