--- a/playground/package.json
+++ b/playground/package.json
@@ -16,6 +16,9 @@
     "pinia": "^2.0.22",
     "vue": "^3.2.37",
     "vue-class-component": "^8.0.0-0",
+    "playground-template": "^0.1.4",
+    "@antv/x6": "^1.34.1",
+    "antv-x6-vue": "^1.3.0",
     "ws": "^8.8.1"
   },
   "devDependencies": {
