--- a/playground/package.json
+++ b/playground/package.json
@@ -19,7 +19,8 @@
     "playground-template": "^0.1.4",
     "@antv/x6": "^1.34.1",
     "antv-x6-vue": "^1.3.0",
-    "ws": "^8.8.1"
+    "socket.io": "^4.5.2",
+    "socket.io-client": "^4.5.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
