--- a/playground/package.json
+++ b/playground/package.json
@@ -10,17 +10,20 @@
     "both": "npm run server & npm run dev"
   },
   "dependencies": {
-    "@vueuse/core": "^9.2.0",
-    "core-js": "^3.25.1",
-    "golden-layout": "^2.5.0",
-    "pinia": "^2.0.22",
-    "vue": "^3.2.37",
-    "vue-class-component": "^8.0.0-0",
-    "playground-template": "^0.1.5",
     "@antv/x6": "^1.34.1",
+    "@vueuse/core": "^9.2.0",
     "antv-x6-vue": "^1.3.0",
+    "core-js": "^3.25.1",
+    "glob": "^8.0.3",
+    "golden-layout": "^2.5.0",
+    "n3": "^1.16.2",
+    "pinia": "^2.0.22",
+    "playground-template": "^0.1.5",
+    "rdf-ext": "^2.1.0",
     "socket.io": "^4.5.2",
-    "socket.io-client": "^4.5.2"
+    "socket.io-client": "^4.5.2",
+    "vue": "^3.2.37",
+    "vue-class-component": "^8.0.0-0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
