--- a/playground/package.json
+++ b/playground/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@antv/x6": "^1.34.1",
+    "@rdfjs-elements/rdf-editor": "^0.5.4",
     "@vueuse/core": "^9.2.0",
     "antv-x6-vue": "^1.3.0",
     "core-js": "^3.25.1",
@@ -19,6 +20,7 @@
     "n3": "^1.16.2",
     "pinia": "^2.0.22",
     "playground-template": "^0.1.5",
+    "process": "^0.11.10",
     "rdf-ext": "^2.1.0",
     "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.2",
