--- a/playground/package.json
+++ b/playground/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@antv/x6": "^1.34.1",
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@rdfjs-elements/rdf-editor": "^0.5.4",
     "@vueuse/core": "^9.2.0",
     "antv-x6-vue": "^1.3.0",
@@ -25,7 +26,8 @@
     "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.2",
     "vue": "^3.2.37",
-    "vue-class-component": "^8.0.0-0"
+    "vue-class-component": "^8.0.0-0",
+    "vue3-markdown-it": "^1.0.10"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
